# django-ajustamento-redes-nivelamento

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  db.sqlite3  manage.py  papiro.md  setup.cfg
ajunivel/: NivParamet.py  apps.py  forms.py  urls.py  views.py
ajunivel/static/ajunivel/: Arquivos_texto.rar
ajunivel/static/ajunivel/css/: simple-sidebar.css
ajunivel/templates/ajunivel/: index.html  menu.html  top.html
django_ajunivel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
papiroDjango/: asgi.py  settings.py  urls.py  wsgi.py
se6alunos/: Mtools.py  NivParamet.py  admin.py  apps.py  models.py  urls.py  views.py
se6alunos/migrations/: 0001_initial.py
se6alunos/static/se6alunos/: Exercicios.rar
se6alunos/static/se6alunos/css/: ajunivel.css  ajunivel.css.bak  simple-sidebar.css
se6alunos/templates/se6alunos/: ajunivel.html  index.html
