[metadata]
name = django-ajunivel
version = 1.0
description = SISTEMA DE CÁLCULO GEODÉSICO: IMPLEMENTAÇÃO DE AJUSTAMENTO DE REDES DE NIVELAMENTO GEOMÉTRICO EM AMBIENTES COMPUTACIONAIS LIVRES
long_description = file: README.rst
url = https://www.example.com/
author = Humberto Diego Aguiar Alves
author_email = humberto-xingu@live.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0 
    matplotlib==3.4.3
    numpy==1.21.3
    pandas==1.3.3
    scipy==1.7.1